--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,224 @@
+
 .App {
-  text-align: center;
-}
+  flex: 1;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 40px;
+
+  padding: 80px 0;
+}
+
+/* <Header> */
+
+.header{
+  border: 1px solid white;
+  padding: 20px 20px 20px 40px;
+
+  flex: 1;
+  width: 85%;
+
+  display: flex;
+  justify-content: space-around;
+}
+
+.left-bar{
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.center-bar{
+  flex: 3;
+}
+
+.right-bar{
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 15px;
+
+}
+
+/* </Header> */
+/*****************************************************************************************/
+
+/* <Footer> */
+
+.footer{
+  border: 1px solid white;
+  padding: 20px 40px 40px 40px;
+
+  width: 85%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px
+}
+
+/* </Footer> */
+
+/*RIGHT*/
+
+
+#precipitation, .details_info>h1{
+  font-weight: lighter;
+}
+#temperature{
+  padding: 15px 0;
+  font-size: 4rem;
+}
+#convert-temp{
+  border: none;
+  background-color: none;
+  font-size: 1rem;
+  text-align: start;
+
+  padding-bottom: 2px;
+  border-bottom: 2px solid white;
+  
+  align-self: flex-start;
+  cursor: pointer;
+}
+#weather-icon{
+  padding: 15px 0;
+}
+.search-container{
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
+  padding-bottom: 2px;
+  border-bottom: 2px solid white;
+}
+input[type=text]{
+font-size: 1rem;
+background-color: rgba(250, 235, 215, 0);
+border: none;
+color: white;
+padding: 0 5px;
+width: 150px;
+}
+input[type=text]:focus{
+  color: white;
+  border: none;
+  outline: none;
+}
+#search-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+#search-btn>img{
+  width: 25px;
+}
+
+/*CENTER*/
+
+/*LEFT*/
+
+.weather-details{
+  display: flex;
+  gap: 10px;
+}
+.details_icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.details_icon>img{
+  width: 40px;
+}
+.details_info{
+  flex:1;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+}
+/*****************************************************************************************/
+/*LOWER BOX*/
+
+.interface{
+  display: flex;
+  gap: 25px;
+}
+.interface-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.selected{
+  border: 2px solid white;
+}
+.change_left{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.change_left>img, .change_right>img{
+  height: 25px;
+  cursor: pointer;
+}
+.dot{
+  position: relative;
+  top: -1px;
+  height: 15px;
+  width: 15px;
+  border: 2px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.dot-selected{
+  background-color: white;
+}
+.change-hours{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.show{
+  display: flex;
+}
+.hide{
+  display: none;
+}
+.forecasts-block{
+  display: flex;
+  justify-content: space-between;
+}
+.daily-forecast, .hourly-forecast{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.daily_icon{
+  flex: 1;
+  display: flex;
+  align-items: flex-end;
+}
+.daily_icon>img{
+  width: 50px;
+  align-self: flex-end;
+}
+
+::placeholder{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.hourly_time{
+  font-size: 1.5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hourly_temp{
+  font-size: 1.7rem;
+}
+.hourly_icon>img{
+  width: 50px;
 }
