--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Prosto one";
+  src: url("./fonts/ProstoOne-Regular.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "San Francisco";
+  src: url("./fonts/SF-UI-Display-Regular.otf") format("opentype");
+}
+
+:root {
+  font-size: 15px;
+}
+
+* {
+  -border: 1px dashed white;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -font-family: "Prosto one";
+  font-family: "San Francisco";
+}
+
+body {
+  background-image: url("./imgs/background/background3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  -background-color: black;
+
+  min-height: 100vh;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
 }
