--- a/src/App.css
+++ b/src/App.css
@@ -219,8 +219,7 @@ input[type="text"]:focus {
 /* </FooterForecast> */
 
 /* <FooterForecastDaily> */
-.daily-forecast,
-.hourly-forecast {
+.forecast {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -236,9 +235,23 @@ input[type="text"]:focus {
   width: 50px;
   align-self: flex-end;
 }
-
-
 /* </ FooterForecastDaily> */
+
+/* <FooterForecastHourly> */
+.hourly_time {
+  font-size: 1.5rem;
+}
+
+.hourly_temp {
+  font-size: 1.7rem;
+}
+
+.hourly_icon > img {
+  width: 50px;
+}
+/* </FooterForecastHourly> */
+
+
 
 /*LOWER BOX*/
 
@@ -267,13 +280,4 @@ input[type="text"]:focus {
 
 ::placeholder {
   color: white;
-}
-.hourly_time {
-  font-size: 1.5rem;
-}
-.hourly_temp {
-  font-size: 1.7rem;
-}
-.hourly_icon > img {
-  width: 50px;
 }
