--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   justify-content: center;
   gap: 40px;
 
+  min-width: 900px;
   height: 100vh;
   padding: 80px 0;
 }
@@ -18,7 +19,7 @@
   padding: 20px 20px 20px 40px;
 
   flex: 1;
-  width: 85%;
+  width: 70%;
 
   display: flex;
   justify-content: space-around;
@@ -146,7 +147,7 @@ input[type="text"]:focus {
   border: 1px solid white;
   padding: 20px 40px 40px 40px;
 
-  width: 85%;
+  width: 70%;
   height: 300px;
   display: flex;
   flex-direction: column;
