--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   justify-content: center;
   gap: 40px;
 
-  min-width: 900px;
-  height: 100vh;
+  min-width: 1100px;
+  min-height: 100vh;
   padding: 80px 0;
 }
 
