--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  background-image: url("./imgs/background/background2.jpg");
+  background-image: url("../public/imgs/background/background2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
