--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 /*---------------------------------------------------------------------------------*/
 /* <Header> */
 .header {
-  border: 1px solid white;
+  -border: 1px solid white;
   padding: 20px 20px 20px 40px;
 
   flex: 1;
@@ -145,7 +145,7 @@ input[type="text"]:focus {
 /*---------------------------------------------------------------------------------*/
 /* <Footer> */
 .footer {
-  border: 1px solid white;
+  -border: 1px solid white;
   padding: 20px 40px 40px 40px;
 
   width: 70%;
